--- a/app/javascript/css/enrollment.scss
+++ b/app/javascript/css/enrollment.scss
@@ -224,6 +224,12 @@
     color: var(--secondary-color);
   }
 
+  .logo-column {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 100px;
+  }
+
   h3 a {
     color: var(--default-font-color);
     font-size: 18px;
